--- a/starter/app/src/release/res/values/google_maps_api.xml
+++ b/starter/app/src/release/res/values/google_maps_api.xml
@@ -1,6 +1,7 @@
 <resources>
     <!--
-    TODO: Before you release your application, you need a Google Maps API key.
+
+     Before you release your application, you need a Google Maps API key.
 
     To do this, you can either add your release key credentials to your existing
     key, or create a new key.
@@ -16,5 +17,5 @@
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
     -->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">YOUR_KEY_HERE</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAWQKltajJR8qphSdGsYrbOFZPTD3ll5Q0</string>
 </resources>
